<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ff123456"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="#ff123456"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#ff234567"
            android:gravity="center_horizontal"
            android:paddingLeft="10dp"
            android:paddingTop="20dp"
            android:paddingRight="10dp"
            android:paddingBottom="20dp"
            android:text="@string/result_title"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="16sp" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#ff234567"
            android:gravity="center_horizontal"
            android:paddingLeft="10dp"
            android:paddingTop="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="10dp"
            android:text="@string/result_sub_title"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="10sp" />

        <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">

            <TableRow>

                <TextView
                    android:gravity="right"
                    android:paddingRight="5dp"
                    android:text="@string/result_label_average_time"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <TextView
                    android:id="@+id/lblAverageTime"
                    android:gravity="right"
                    android:paddingRight="5dp"
                    android:text=""
                    android:textAppearance="?android:attr/textAppearanceMedium" />
            </TableRow>

            <TableRow>

                <TextView
                    android:gravity="right"
                    android:paddingRight="5dp"
                    android:text="@string/result_label_incorrect_actions"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <TextView
                    android:id="@+id/lblIncorrectActions"
                    android:gravity="right"
                    android:paddingRight="5dp"
                    android:text=""
                    android:textAppearance="?android:attr/textAppearanceMedium" />
            </TableRow>

            <TableRow>

                <TextView
                    android:gravity="right"
                    android:paddingRight="5dp"
                    android:text="@string/result_label_average_accuracy"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <TextView
                    android:id="@+id/lblAverageAccuracy"
                    android:gravity="right"
                    android:paddingRight="5dp"
                    android:text=""
                    android:textAppearance="?android:attr/textAppearanceMedium" />
            </TableRow>
        </TableLayout>

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnBack"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="btnBack_Click"
                android:text="@string/result_button_back"
                android:textAppearance="?android:attr/textAppearanceMedium"></Button>

            <Button
                android:id="@+id/btnExit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="btnExit_Click"
                android:text="@string/button03text"
                android:textAppearance="?android:attr/textAppearanceMedium"></Button>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>