<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <!-- Content Area -->
        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/vpContent"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" />

        <!-- Buttons Column -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="364dp"
            android:layout_gravity="end|center_vertical"
            android:layout_marginTop="130dp"
            android:orientation="vertical"
            android:padding="16dp">

            <!-- Icon Area -->
            <!-- Match the button size -->
            <ImageView
                android:layout_width="58dp"
                android:layout_height="58dp"
                android:layout_marginBottom="30dp"
                android:scaleType="centerInside"
                android:src="@drawable/ball" />

            <!-- Like Button -->
            <ImageButton
                android:id="@+id/btnLike"
                android:layout_width="68dp"
                android:layout_height="68dp"
                android:background="?android:selectableItemBackground"
                android:contentDescription="@string/like_button_description"
                android:padding="10dp"
                android:src="@drawable/heart" />

            <!-- Comment Button -->
            <ImageButton
                android:id="@+id/btnComment"
                android:layout_width="68dp"
                android:layout_height="68dp"
                android:layout_marginTop="16dp"
                android:background="?android:selectableItemBackground"
                android:contentDescription="@string/comment_button_description"
                android:padding="10dp"
                android:src="@drawable/message" />

            <!-- Share Button -->
            <ImageButton
                android:id="@+id/btnShare"
                android:layout_width="68dp"
                android:layout_height="68dp"
                android:layout_marginTop="16dp"
                android:background="?android:selectableItemBackground"
                android:contentDescription="@string/share_button_description"
                android:padding="10dp"
                android:src="@drawable/arrowblank" />
        </LinearLayout>

        <!-- Text UI in the center of the screen -->
        <TextView
            android:id="@+id/lblDisplay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="center"
            android:visibility="gone"
            android:text=""
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Button
            android:id="@+id/btnStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="center"
            android:text="@string/start_experiment_button_text"
            android:textAppearance="?android:attr/textAppearanceMedium" />

    </FrameLayout>
</LinearLayout>