<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ff123456"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="#ff123456"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/lblSetupTitle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#ff234567"
            android:gravity="center_horizontal"
            android:paddingLeft="10dp"
            android:paddingTop="20dp"
            android:paddingRight="10dp"
            android:paddingBottom="20dp"
            android:text="@string/setuptitletext"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/lblSetupSubTitle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#ff234567"
            android:gravity="center_horizontal"
            android:paddingLeft="10dp"
            android:paddingTop="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="10dp"
            android:text="@string/setuptitlesubtext"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="10sp" />

        <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">

            <TableRow>

                <TextView
                    android:id="@+id/lblSubjectID"
                    android:gravity="right"
                    android:paddingRight="5dp"
                    android:text="@string/paramlabelsubjectid"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <Spinner
                    android:id="@+id/cmbSubjectID"
                    android:layout_weight="1"
                    android:gravity="left"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
            </TableRow>

            <TableRow>

                <TextView
                    android:id="@+id/lblControlMethod"
                    android:gravity="right"
                    android:paddingRight="5dp"
                    android:text="@string/setupitemcontrolmethod"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <Spinner
                    android:id="@+id/cmbControlMethod"
                    android:layout_weight="1"
                    android:gravity="left"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
            </TableRow>

            <TableRow>

                <TextView
                    android:id="@+id/lblTrials"
                    android:gravity="right"
                    android:paddingRight="5dp"
                    android:text="@string/setupitemtrials"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <Spinner
                    android:id="@+id/cmbTrials"
                    android:layout_weight="1"
                    android:gravity="left"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
            </TableRow>
        </TableLayout>

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnOK"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="btnOK_Click"
                android:text="@string/button01text"
                android:textAppearance="?android:attr/textAppearanceMedium"></Button>

            <Button
                android:id="@+id/btnOK2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="btnOK2_Click"
                android:text="@string/button02text"
                android:textAppearance="?android:attr/textAppearanceMedium"></Button>

            <Button
                android:id="@+id/btnExit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="btnExit_Click"
                android:text="@string/button03text"
                android:textAppearance="?android:attr/textAppearanceMedium"></Button>
        </LinearLayout>

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/lblCurrentAction"
                android:gravity="center"
                android:paddingRight="5dp"
                android:text="-"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_height="match_parent"
                android:layout_width="match_parent"/>
        </LinearLayout>

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <Button
                android:id="@+id/btnPrev"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="btnPrev_Click"
                android:text="PREV"
                android:textAppearance="?android:attr/textAppearanceMedium"></Button>

            <Button
                android:id="@+id/btnNext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="btnNext_Click"
                android:text="NEXT"
                android:textAppearance="?android:attr/textAppearanceMedium"></Button>

            <Button
                android:id="@+id/btnLike"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="btnLike_Click"
                android:text="LIKE"
                android:textAppearance="?android:attr/textAppearanceMedium"></Button>

            <Button
                android:id="@+id/btnComment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="btnComment_Click"
                android:text="COMM"
                android:textAppearance="?android:attr/textAppearanceMedium"></Button>

            <Button
                android:id="@+id/btnShare"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="btnShare_Click"
                android:text="SHAR"
                android:textAppearance="?android:attr/textAppearanceMedium"></Button>
        </LinearLayout>

    </LinearLayout>
</LinearLayout>